<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bkg"
    tools:context=".MainActivity4">
    <TextView
        android:id="@+id/txt_start"
        android:layout_width="205dp"
        android:layout_height="33dp"
        android:gravity="center"
        android:text="@string/txt_started"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/tb_email2"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@color/casute"
        android:ems="10"


        android:hint="Email"
        android:text="@string/tb_email"
        android:textColor="#A9F1F9"
        android:textColorHint="#A9F1F9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_start"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/tb_pass2"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="2dp"
        android:background="@color/casute"
        android:ems="10"

        android:hint="Password"

        android:minHeight="48dp"
        android:text="@string/tb_passwordbun"
        android:textColor="#A9F1F9"
        android:textColorHint="#A9F1F9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_email2"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/cb_termspolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:text="@string/cbtermspolicy"
        android:textColor="#A9F1F9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_pass2" />

    <CheckBox
        android:id="@+id/cb_protection"
        android:layout_width="408dp"
        android:layout_height="69dp"
        android:layout_marginTop="8dp"
        android:text="@string/cblaws"
        android:textColor="#A9F1F9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_termspolicy" />

    <CheckBox
        android:id="@+id/cb_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/cbupdate"
        android:textColor="#A9F1F9"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_protection" />

    <Button
        android:id="@+id/btnnext"
        android:layout_width="337dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_log_rotund"
        android:text="@string/btn_next"

        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_update" />

</androidx.constraintlayout.widget.ConstraintLayout>